--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 <div class="container">
 <div class="row">
 	<div class="col-md-12 nav">
+	<ul>
+	<li><a>Prototypes</a>
+		<ul>
+			<li><a>Current Projects</a></li>
+			<li><a>Historical Prototypes></a></li>
+			<li><a>Guides & Troubleshoot</a></li>
+		</ul>
+	</li>
+	<li><a>Research</a></li>
+	<ul>
 	</div>
 </div>
 <div class="row">
