--- a/index.html
+++ b/index.html
@@ -1,4 +1,32 @@
 <html>
 <head>
+	<script type="text/javascript" src="/js/bootstrap.js"></script>
+	<link rel="stylesheet" href="/css/bootstrap.css">
 <head>
+<div class="container">
+<div class="row">
+	<div class="col-md-12 nav">
+	<ul>
+	<li><a>Prototypes</a>
+		<ul>
+			<li><a>Current Projects</a></li>
+			<li><a>Historical Prototypes></a></li>
+			<li><a>Guides & Troubleshoot</a></li>
+		</ul>
+	</li>
+	<li><a>Research</a></li>
+	<ul>
+	</div>
+</div>
+<div class="row">
+	<div class="col-md-12 banner">
+	</div>
+</div>
+	<div class="col-md-12 site-intro">
+	</div>
+	<div class="row">
+		<div class="col-md-6"> text</div>
+		<div class="col-md-6"> text</div>
+	</div>
+</div>
 </html>
