--- a/index.html
+++ b/index.html
@@ -1,32 +1,50 @@
 <html>
 <head>
-	<script type="text/javascript" src="/js/bootstrap.js"></script>
-	<link rel="stylesheet" href="/css/bootstrap.css">
-<head>
-<div class="container">
-<div class="row">
-	<div class="col-md-12 nav">
-	<ul>
-	<li><a>Prototypes</a>
-		<ul>
-			<li><a>Current Projects</a></li>
-			<li><a>Historical Prototypes></a></li>
-			<li><a>Guides & Troubleshoot</a></li>
-		</ul>
-	</li>
-	<li><a>Research</a></li>
-	<ul>
+<meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  	<script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+	<script type="text/javascript" src="js/bootstrap.js"></script>
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/main.css">
+	<!--google fone -->
+	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+</head>
+<div class="wrapper">
+<!-- NAV -->
+	<nav class="navbar navbar-default" role="navigation">
+		 <div class="navbar-header">
+		 <button class="navbar-toggler hidden-sm-up pull-right" type="button" data-toggle="collapse" data-target="#navbarMain">
+            ☰
+            <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> 
+        </button>
+		 <div id="navbarMain" class="collapse navbar-toggleable-xs">
+				<ul class="nav navbar-nav">
+					<li class="nav-item"><a href="#" class="active nav-link" >Home</a></li>
+					<li class="nav-item"><a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Prototypes</a> <span class="caret"></span>
+						<ul class="dropdown-menu">
+							<li class="nav-item"><a class="nav-link">Current Projects</a></li>
+							<li class="nav-item"><a class="nav-link">Historical Prototypes</a></li>
+							<li class="nav-item"><a class="nav-link">Guides & Troubleshoot</a></li>
+						</ul>
+					</li>
+					<li class="nav-item"><a href="#" class="nav-link">Research</a></li>
+				</ul>
+			</div>
+			</div>
+	</nav>
+	<div class="row">
+		<div class="col-md-12 banner">
+		</div>
 	</div>
-</div>
-<div class="row">
-	<div class="col-md-12 banner">
-	</div>
-</div>
 	<div class="col-md-12 site-intro">
+	<span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vitae dignissim nulla. Nulla aliquet lacus eu egestas congue. Suspendisse efficitur lacus non arcu vestibulum, id sed.</span>
 	</div>
 	<div class="row">
-		<div class="col-md-6"> text</div>
-		<div class="col-md-6"> text</div>
+		<div class="col-md-6 subBlock"><div class="blockContent"> <a href="#">Prototypes</a></div></div>
+		<div class="col-md-6 subBlock"><div class="blockContent"> <a href="#">Research</a></div></div>
 	</div>
 </div>
 </html>
