--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Home</title>
+  <title>Prototypes</title>
 <meta charset='utf-8'>
-<link rel="icon" type="image/x-icon" href="./img/fav.ico">
+<link rel="icon" type="image/x-icon" href="../img/fav.ico">
 <meta name="viewport" content="width=device-width,minimal-ui"  >
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-<link rel="stylesheet" type="text/css" href="./css/public.css" media="screen">
+<link rel="stylesheet" type="text/css" href="../css/public.css" media="screen">
 <!--
-<link rel="stylesheet" type="text/css" href="./css/github_gist.css" media="screen"> -->
+<link rel="stylesheet" type="text/css" href="../css/github_gist.css" media="screen"> -->
 <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-<script type="text/javascript" src="./js/jquery-2.0.0.min.js"></script>
-<script type="text/javascript" src="./js/highlight.pack.js"></script>
+<script type="text/javascript" src="../js/jquery-2.0.0.min.js"></script>
+<script type="text/javascript" src="../js/highlight.pack.js"></script>
 <script type="text/javascript">
 	
 </script>
@@ -23,13 +23,13 @@
 <body>
   <!-- nav -->
   <header class="header">
-    <a href="/" class="logo"><img src="./img/logo.png"></a>
+    <a href="/" class="logo"><img src="../img/logo.png"></a>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <ul class="menu">
 <li>
 	
-		<a class=current href='./index.html' >Home</a>
+		<a  href='./index.html' >Home</a>
 		
 	
 		<a  href='./prototypes/index.html' >Prototypes ▾</a>
@@ -68,12 +68,14 @@
       <!-- banner -->
       <div class="banner"> <span>Banner here</span>
       </div>
-      <!-- intro text -->
-      <div class="intro"><span>Find the latest prototypes and test resultes here. Get to know the team and the limitless future of Cisco Spark.</span></div>
+      <!-- intro text 
+      <div class="intro"><span>Find the latest prototypes and test resultes here. Get to know the team and the limitless future of Cisco Spark.</span></div>-->
       <!--content blocks -->
       <div class="block-wrapper">
-        <div class="block-l"> <a href="#"><span>Protorypes</span></a></div>
-        <div class="block-r"> <a href="#"><span>Research</span></a></div>
+        <div class="block-l"> <a href="#"><span>Current Projects</span></a></div>
+        <div class="block-r"> <a href="#"><span>Experimental</span></a></div>
+        <div class="block-l"> <a href="#"><span>Archived</span></a></div>
+        <div class="block-r"> <a href="#"><span>FAQ & Troubleshoot</span></a></div>
       </div>
     </dir>
   </div>
