--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 <script type="text/javascript" src="./js/jquery-2.0.0.min.js"></script>
 <script type="text/javascript" src="./js/highlight.pack.js"></script>
-<script type="text/javascript">
-	
-</script>
+<script type="text/javascript" src="./js/breadcrumb.js"></script>
 
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -83,9 +81,11 @@
 
   </header>
   <div class='container'>
-    <!-- breadcrumb-->
+  
     <!--main content -->
     <div class="main">
+    <!-- breadcrumb -->
+    <script type="text/javascript">breadcrumbs();</script>
       <!-- banner -->
       <div class="banner"> <span>Banner here</span>
       </div>
