--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -13,9 +13,7 @@
 <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 <script type="text/javascript" src="../js/jquery-2.0.0.min.js"></script>
 <script type="text/javascript" src="../js/highlight.pack.js"></script>
-<script type="text/javascript">
-	
-</script>
+<script type="text/javascript" src="../js/breadcrumb.js"></script>
 
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
