--- a/research/3d-gyroscope.html
+++ b/research/3d-gyroscope.html
@@ -13,14 +13,9 @@
 <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 <script type="text/javascript" src="../js/jquery-2.0.0.min.js"></script>
 <script type="text/javascript" src="../js/highlight.pack.js"></script>
-<script type="text/javascript">
-	
-</script>
+<script type="text/javascript" src="../js/breadcrumb.js"></script>
 <style type="text/css"></style>
-<script type="text/javascript">
-$(function(){
-});
-</script>
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
@@ -86,7 +81,12 @@ $(function(){
 
   </header>
   <div class='container'>
-  <!-- breadcrumb-->
+    <!-- breadcrumb -->
+    <script type="text/javascript">
+  
+    breadcrumbs(); 
+    
+    </script>
     <!--main content -->
     <div class="main">
 <!-- or breadcrumb-->
