--- a/prototypes/current/spark-obtp.html
+++ b/prototypes/current/spark-obtp.html
@@ -81,11 +81,27 @@
 
   </header>
   <div class='container'>
-    <!-- breadcrumb -->
-       <!--main content -->
-    <div class="main">
-<!-- or breadcrumb-->
-     <ul class='sideMenu'>
+   <!--main content -->
+   <div class="main">
+    <ul class="breadcrumbs">
+	<li><a href="../../index.html">Home</a></li> 
+	</li>
+	
+		<li>
+				<a href='../../prototypes/' >Prototypes</a>
+		</li>
+	
+		<li>
+				<a href='../../prototypes/current/' >Current</a>
+		</li>
+	
+		<li>
+				<a href='../../prototypes/current/spark-obtp.html' >Spark Obtp</a>
+		</li>
+	
+</ul>
+
+    <ul class='sideMenu'>
 	
 	
 		<li><a   href='spark-pairing.html'>Spark Pairing 2017</a></li>
@@ -100,11 +116,11 @@
 	
 	
 </ul>
-   
-     <!-- article -->
-     <dir class="content">     
-       <div class="section">
-        <article class='article'>
+    
+    <!-- article -->
+    <dir class="content">     
+     <div class="section">
+      <article class='article'>
 	<header class='article_header'>
 		<h1>Spark OBTP 2017</h1>
 	</header>
@@ -149,14 +165,14 @@ The parameter&#39;s value should be &#39;CCDS&#39;, &#39;UE&#39;, &#39;UT&#39;, 
 	</footer>
 </article>
        	
-      </div>
-    </dir>
+    </div>
+  </dir>
 
 
-  </div>
-  <!-- footer -->
-  <div style="clear:both;"></div>
-  <footer class='copyright'>
+</div>
+<!-- footer -->
+<div style="clear:both;"></div>
+<footer class='copyright'>
 	<p>CCDS UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
