--- a/research/360°-camera-and-vr.html
+++ b/research/360°-camera-and-vr.html
@@ -81,11 +81,23 @@
 
   </header>
   <div class='container'>
-    <!-- breadcrumb -->
-       <!--main content -->
-    <div class="main">
-<!-- or breadcrumb-->
-     <ul class='sideMenu'>
+   <!--main content -->
+   <div class="main">
+    <ul class="breadcrumbs">
+	<li><a href="../index.html">Home</a></li> 
+	</li>
+	
+		<li>
+				<a href='../research/' >Research</a>
+		</li>
+	
+		<li>
+				<a href='../research/360°-camera-and-vr.html' >360° Camera And Vr</a>
+		</li>
+	
+</ul>
+
+    <ul class='sideMenu'>
 	
 	
 		<li><a class=current  href='360°-camera-and-vr.html'>360° Camera and VR</a></li>
@@ -100,11 +112,11 @@
 	
 	
 </ul>
-   
-     <!-- article -->
-     <dir class="content">     
-       <div class="section">
-        <article class='article'>
+    
+    <!-- article -->
+    <dir class="content">     
+     <div class="section">
+      <article class='article'>
 	<header class='article_header'>
 		<h1>360° Camera and VR</h1>
 	</header>
@@ -143,14 +155,14 @@
 	</footer>
 </article>
        	
-      </div>
-    </dir>
+    </div>
+  </dir>
 
 
-  </div>
-  <!-- footer -->
-  <div style="clear:both;"></div>
-  <footer class='copyright'>
+</div>
+<!-- footer -->
+<div style="clear:both;"></div>
+<footer class='copyright'>
 	<p>CCDS UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
