--- a/team/index.html
+++ b/team/index.html
@@ -84,7 +84,20 @@
     <!-- breadcrumb-->
     <!--main content -->
     <div class="main">
-     
+     <ul class="breadcrumbs">
+	<li><a href="../index.html">Home</a></li> 
+	</li>
+	
+		<li>
+				<a href='../team/' >Team</a>
+		</li>
+	
+		<li>
+				<a href='../team/index.html' >Index</a>
+		</li>
+	
+</ul>
+   
       <!-- intro text -->
       <div class="intro"><span>Meet the team members behind the Spark portotypes.</span></div>
       <!--content blocks -->
