--- a/index.html
+++ b/index.html
@@ -82,7 +82,17 @@
   </header>
   <div class='container'>  
     <!--main content -->
-    <div class="main">    
+    <div class="main"> 
+    <ul class="breadcrumbs">
+	<li><a href="./index.html">Home</a></li> 
+	</li>
+	
+		<li>
+				<a href='./index.html' >Index</a>
+		</li>
+	
+</ul>
+
          <!-- banner -->
       <div class="banner"> <span>Banner here</span>
       </div>
