--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -83,6 +83,20 @@
   <div class='container'>
     <!--main content -->
     <div class="main">
+    <ul class="breadcrumbs">
+	<li><a href="../index.html">Home</a></li> 
+	</li>
+	
+		<li>
+				<a href='../prototypes/' >Prototypes</a>
+		</li>
+	
+		<li>
+				<a href='../prototypes/index.html' >Index</a>
+		</li>
+	
+</ul>
+
       <!-- intro text 
       <div class="intro"><span>Find the latest prototypes and test resultes here. Get to know the team and the limitless future of Cisco Spark.</span></div>-->
       <!--content blocks -->
