Css and list page

--- a/prototypes/current/index.html
+++ b/prototypes/current/index.html
@@ -112,14 +112,14 @@
                   <span class="list_title">Spark OBTP 2017</span>
                 </a>
                   <p><span class='list_item_date'>2017-1-20</span><br />
-                  OBTP prototype.</p>  
+                  Mobile and Desktop OBTP (One Button to Push) prototype.</p>  
                   <hr class="divider" />         
               
                 <a class='list_item' target='_blank' href='spark20170124.html'>
                   <span class="list_title">Spark 2017.1.24</span>
                 </a>
                   <p><span class='list_item_date'>2017-1-15</span><br />
-                  These spark prototypes are designed for release on 2017.1.24</p>  
+                  These spark prototypes were designed for release on 2017.1.24</p>  
                   <hr class="divider" />         
               
                 <a class='list_item' target='_blank' href='spark-p5-2016.html'>
