--- a/prototypes/current/index.html
+++ b/prototypes/current/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>Current</title>
+      <title>Guide</title>
 <meta charset='utf-8'>
 <link rel="icon" type="image/x-icon" href="../../img/fav.ico">
 <meta name="viewport" content="width=device-width,minimal-ui"  >
@@ -77,7 +77,6 @@
 		</li>
 	
 </ul>
-
   </header>
         <div class='container'>
             <div class='main'>
@@ -148,4 +147,4 @@
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
   </body>
-</html>
+</html>l>
