--- a/prototypes/current/spark20170124.html
+++ b/prototypes/current/spark20170124.html
@@ -124,15 +124,15 @@
 	</header>
 	<div class='article_body'>
 		<h1 id="mobile">Mobile</h1>
-<h2 id="link">link</h2>
+<h2 id="prototype-link">Prototype Link</h2>
 <p><a href="https://uxccds.github.io/SparkMobile/SparkMobileP5/spark.html">https://uxccds.github.io/SparkMobile/SparkMobileP5/spark.html</a></p>
-<h2 id="usage">usage</h2>
-<p>1) Please use Chrome (mobile mode) or Iphone (webapp mode) to view the prototype.</p>
-<p>2) Do clear the cache if you see any issues at first.</p>
+<h2 id="how-tos">How-tos</h2>
+<p>1) Please use Chrome (mobile mode) or iPhone (webapp mode) to view the prototype.</p>
+<p>2) Try clear browser cache first if you encounter any issue.</p>
 <h1 id="desktop">Desktop</h1>
-<h2 id="link">link</h2>
+<h2 id="prototype-link">Prototype Link</h2>
 <p><a href="https://uxccds.github.io/Spark-Hype-MVO/Spark-MVO-Prototype-currentBuild.html">https://uxccds.github.io/Spark-Hype-MVO/Spark-MVO-Prototype-currentBuild.html</a></p>
-<h2 id="usage">usage</h2>
+<h2 id="how-tos">How-tos</h2>
 <p>1) Please use Chrome to view this prototype.</p>
 		
 	</div>
