--- a/prototypes/current/spark-obtp.html
+++ b/prototypes/current/spark-obtp.html
@@ -126,32 +126,38 @@
 		<h1 id="mobile">Mobile</h1>
 <h2 id="link">link</h2>
 <p><a href="https://uxccds.github.io/SparkMobile/SparkMobileP5/">https://uxccds.github.io/SparkMobile/SparkMobileP5/</a></p>
-<h2 id="usage">usage</h2>
+<h2 id="how-tos">How-tos</h2>
 <p>1) Please use Chrome (mobile mode) or IPhone (webapp mode) to view the prototype.</p>
-<p>2) Clear browser cache first if you see any issues.</p>
+<p>2) Try clear browser cache first if you see any issues.</p>
 <p>3) Choose a version to continue.</p>
 <h1 id="desktop">Desktop</h1>
-<h2 id="link">link</h2>
+<h2 id="prototype-link">Prototype Link</h2>
 <p><a href="https://uxccds.github.io/Spark-Hype-MVO/OBTP-Prototype.html">https://uxccds.github.io/Spark-Hype-MVO/OBTP-Prototype.html</a></p>
-<h2 id="usage">usage</h2>
+<h2 id="how-tos">How-tos</h2>
 <p>1) Please use Chrome to view this prototype.</p>
 <h1 id="mx">MX</h1>
 <h2 id="link">link</h2>
 <p><a href="https://uxccds.github.io/SparkMobile/pair/page/mx.html">https://uxccds.github.io/SparkMobile/pair/page/mx.html</a></p>
-<h2 id="usage">usage</h2>
+<h2 id="how-tos">How-tos</h2>
 <p>1) Please use Chrome to view this prototype.</p>
-<p>2) the MX logic for hot key</p>
-<p>&#39;0&#39; - go to step 0</p>
-<p>&#39;1&#39; - go to step 1 and update the mobile/desktop prototype</p>
-<p>&#39;d&#39; - change the scenario to desktop mode</p>
-<p>&#39;m&#39; - change the scenario to mobile mode</p>
-<p>3) You need add a parameter after the url for both MX prototype and mobile/desktop prototype.</p>
-<p>eg: </p>
+<p>2) The MX logic for hot key</p>
+<ul>
+<li><p>&#39;0&#39; - go to step 0</p>
+</li>
+<li><p>&#39;1&#39; - go to step 1 and update the mobile/desktop prototype</p>
+</li>
+<li><p>&#39;d&#39; - change the scenario to desktop mode</p>
+</li>
+<li><p>&#39;m&#39; - change the scenario to mobile mode</p>
+</li>
+</ul>
+<p>3) You need to add a parameter after the url for both MX prototype and mobile/desktop prototype.</p>
+<p>e.g.: </p>
 <p>The link for mobile index page<br><a href="https://uxccds.github.io/SparkMobile/SparkMobileP5/?room=public">https://uxccds.github.io/SparkMobile/SparkMobileP5/?room=public</a></p>
 <p>The link for MX
 <a href="https://uxccds.github.io/SparkMobile/pair/page/mx.html?room=public">https://uxccds.github.io/SparkMobile/pair/page/mx.html?room=public</a></p>
-<p>The parameter&#39;s name is &#39;room&#39;.
-The parameter&#39;s value should be &#39;CCDS&#39;, &#39;UE&#39;, &#39;UT&#39;, &#39;private&#39; or &#39;public&#39;.</p>
+<p>In this example, the parameter added is &#39;room&#39;.
+The parameter&#39;s value could be &#39;CCDS&#39;, &#39;UE&#39;, &#39;UT&#39;, &#39;private&#39; or &#39;public&#39;.</p>
 <p>4) Only when the mx prototype and mobile/desktop prototype use the same name will they be paired.</p>
 		
 	</div>
