--- a/prototypes/current/spark-p5-2016.html
+++ b/prototypes/current/spark-p5-2016.html
@@ -123,25 +123,25 @@
 		<h1>Spark P5 2016</h1>
 	</header>
 	<div class='article_body'>
-		<p>To let the users adapt to our new Spark design more smoothly, the UXCCDS team defined 5 steps to update the Spark app&#39;s style. This is the P5 prototype. We use react.js to build this prototype and many parts of this prototypes are based on some dynamic data.</p>
-<h2 id="screen-shot">screen shot</h2>
+		<p>To let the users adapt to our new Spark design more smoothly, the UXCCDS team defined 5 steps to update the Spark app&#39;s style. This is the P5 prototype. We use react.js to build this prototype and many parts of this prototypes are based on dynamic data.</p>
+<h2 id="screen-shot">Screen shot</h2>
 <p><img src="../../img_data/prototypes/Spark P5 2016.png" alt="Spark P5 2016"/></p>
-<h1 id="launch-the-prototype">launch the prototype</h1>
+<h1 id="launching-the-prototype">Launching the prototype</h1>
 <p>You can launch this prototype through the following ways: </p>
 <p>1) Open the prototype in Chrome&#39;s mobile simulator. Click <a href="../guide/chrome&#39;s-mobile-simulator.html">here</a> to learn more.</p>
 <p>2) Install the prototype on your iPhone as a web app. Click <a href="../guide/install-web-app.html">here</a> to learn more.</p>
-<h2 id="here-is-the-link">Here is the link</h2>
+<h2 id="prototype-link">Prototype Link</h2>
 <p><a href="https://uxccds.github.io/SparkMobile/v2/page/p5.html">https://uxccds.github.io/SparkMobile/v2/page/p5.html</a></p>
-<h1 id="aim">Aim</h1>
-<p>This prototype aims to displays the following goals:</p>
+<h1 id="goals">Goals</h1>
+<p>This prototype aims to demostrate the following goals:</p>
 <p>1) Demostrate the full experience of Spark app.</p>
 <p>2) Smoonther transition animation between pages.</p>
 <p>3) Apply PIP to Spark.</p>
-<h1 id="usage">Usage</h1>
-<p>1) Click &#39;Branding team&#39; &#39;s line to enter its room.</p>
+<h1 id="how-tos">How-tos</h1>
+<p>1) Click the &#39;Branding team&#39; &#39;s line to enter its room.</p>
 <p>2) Click the activity board&#39;s icon on the top-right corner to open it.</p>
 <p>3) Click each ball on the activity board to experience each feature.</p>
-<p>4) Each room has its own data for the chat panel. You can send messages here and a robot will reply sometimes.</p>
+<p>4) Each room has its own data for the chat panel. You can send messages here and the bot may respond to certain specific terms.</p>
 		
 	</div>
 	<footer class='article_footer'>
