--- a/prototypes/current/spark-pairing.html
+++ b/prototypes/current/spark-pairing.html
@@ -124,25 +124,25 @@
 	</header>
 	<div class='article_body'>
 		<h1 id="mobile-prototype">Mobile Prototype</h1>
-<h3 id="screen-shot">screen shot</h3>
+<h3 id="screen-shot">Screen shot</h3>
 <p><img src="../../img_data/prototypes/spark-pairing1.png" alt="pairing prototype mobile"/></p>
-<h2 id="link">link</h2>
+<h2 id="prototype-link">Prototype Link</h2>
 <p><a href="https://uxccds.github.io/SparkMobile/SparkMobilePairing/sparkMobilePair.html">https://uxccds.github.io/SparkMobile/SparkMobilePairing/sparkMobilePair.html</a></p>
-<h2 id="usage">usage</h2>
+<h2 id="how-to">How-to</h2>
 <p>1) Please use Chrome (mobile mode) or IPhone (webapp mode) to view the prototype.</p>
 <p>2) If you see any issues, try clearing your browser cache first.</p>
 <p>3) Choose a version to continue.</p>
 <h1 id="desktop">Desktop</h1>
-<h2 id="link">link</h2>
+<h2 id="link">Link</h2>
 <p><a href="https://uxccds.github.io/Spark-Hype-MVO/devicepairing-desktop.html">https://uxccds.github.io/Spark-Hype-MVO/devicepairing-desktop.html</a></p>
-<h2 id="usage">usage</h2>
+<h2 id="how-to">How-to</h2>
 <p>1) Please use Chrome to view this prototype.</p>
 <h1 id="sparkboard">SparkBoard</h1>
-<h2 id="link">link</h2>
+<h2 id="prototype-link">Prototype Link</h2>
 <p><a href="https://uxccds.github.io/SparkMobile/pair/page/sparkboardpair.html">https://uxccds.github.io/SparkMobile/pair/page/sparkboardpair.html</a></p>
-<h2 id="usage">usage</h2>
+<h2 id="how-tos">How-tos</h2>
 <p>1) Please use Chrome to view this prototype.</p>
-<p>2)  You can use the following hot keys to go to the screens.</p>
+<p>2) You can use the following hot keys to go to the screens.</p>
 <p>key space -&gt; black screen</p>
 <p>key 1 -&gt; the &#39;hello&#39; screen.</p>
 <p>key 2 -&gt; the screen with activity balls</p>
