List view to include image

--- a/prototypes/current/index.html
+++ b/prototypes/current/index.html
@@ -102,6 +102,7 @@
               <div class="articleBlock">
                 <a class='list_item' target='_blank' href='spark-pairing.html'>
                   <span class="list_title">Spark Pairing 2017</span>
+                  <img src='../../img_data/prototypes/spark-pairing1.png'>
                 </a>
                   <p><span class='list_item_date'>2017-4-13</span><br />
                   Mobile and Desktop Spark Prototype featuring the pairing functions</p>  
@@ -111,6 +112,7 @@
               <div class="articleBlock">
                 <a class='list_item' target='_blank' href='spark-obtp.html'>
                   <span class="list_title">Spark OBTP 2017</span>
+                  <img src='../../img_data/'>
                 </a>
                   <p><span class='list_item_date'>2017-1-20</span><br />
                   Mobile and Desktop OBTP (One Button to Push) prototype.</p>  
@@ -120,6 +122,7 @@
               <div class="articleBlock">
                 <a class='list_item' target='_blank' href='spark20170124.html'>
                   <span class="list_title">Spark 2017.1.24</span>
+                  <img src='../../img_data/'>
                 </a>
                   <p><span class='list_item_date'>2017-1-15</span><br />
                   These spark prototypes were designed for release on 2017.1.24</p>  
@@ -129,6 +132,7 @@
               <div class="articleBlock">
                 <a class='list_item' target='_blank' href='spark-p5-2016.html'>
                   <span class="list_title">Spark P5 2016</span>
+                  <img src='../../img_data/'>
                 </a>
                   <p><span class='list_item_date'>2016-9-20</span><br />
                   Spark P1 prototype.</p>  
@@ -138,6 +142,7 @@
               <div class="articleBlock">
                 <a class='list_item' target='_blank' href='spark-p1-2016.html'>
                   <span class="list_title">Spark P1 2016</span>
+                  <img src='../../img_data/'>
                 </a>
                   <p><span class='list_item_date'>2016-9-1</span><br />
                   Spark P1 prototype.</p>  
