--- a/research/index.html
+++ b/research/index.html
@@ -98,6 +98,7 @@
               <div class="articleBlock">
                 <a class='list_item' target='_blank' href='360°-camera-and-vr.html'>
                   <span class="list_title">360° Camera and VR</span>
+                  <img src='../img_data/'>
                 </a>
                   <p><span class='list_item_date'>2017-4-13</span><br />
                   We started to learn AR/VR technology years ago. It should be able to improve our meeting experience.</p>  
@@ -107,6 +108,7 @@
               <div class="articleBlock">
                 <a class='list_item' target='_blank' href='3d-gyroscope.html'>
                   <span class="list_title">3D Gyroscope</span>
+                  <img src='../img_data/'>
                 </a>
                   <p><span class='list_item_date'>2017-4-13</span><br />
                   Most of the model mobile has a 3D [Gyroscope](https://en.wikipedia.org/wiki/Gyroscope) in it. With the Gyroscope, we can trace the movement of the device to some extent.</p>  
@@ -116,6 +118,7 @@
               <div class="articleBlock">
                 <a class='list_item' target='_blank' href='speech-recognition.html'>
                   <span class="list_title">Speech Recognition</span>
+                  <img src='../img_data/'>
                 </a>
                   <p><span class='list_item_date'>Sat Feb 18 2017 16:00:00 GMT-0800 (PST)</span><br />
                   Speech recognition helps people to free up their hands. It became more and more popular after iPhone 4s has been published.</p>  
@@ -125,6 +128,7 @@
               <div class="articleBlock">
                 <a class='list_item' target='_blank' href='webgl.html'>
                   <span class="list_title">WebGL</span>
+                  <img src='../img_data/'>
                 </a>
                   <p><span class='list_item_date'>Sat Feb 18 2017 16:00:00 GMT-0800 (PST)</span><br />
                   WebGL let browsers have the ablility to render 3D things. </p>  
@@ -134,6 +138,7 @@
               <div class="articleBlock">
                 <a class='list_item' target='_blank' href='firebase.html'>
                   <span class="list_title">Firebase</span>
+                  <img src='../img_data/'>
                 </a>
                   <p><span class='list_item_date'>2016-9-1</span><br />
                   We&#39;ve done some researchs on how to build connection between devices. Web database is one of the choice. In our current projects, we choose [Firebase](https://firebase.google.com). Firebase saves us a lot of time on coding server end code. So we focus more on the front end coding.</p>  
