--- a/prototypes/guide/index.html
+++ b/prototypes/guide/index.html
@@ -102,6 +102,7 @@
               <div class="articleBlock">
                 <a class='list_item' target='_blank' href='clear-cache.html'>
                   <span class="list_title">Clear Cache</span>
+                  <img src='../../img_data/'>
                 </a>
                   <p><span class='list_item_date'>2017-4-13</span><br />
                   Browers usually cache datas to speed up loading web pages. This is why sometimes you can not see the latest version of the web pages. And cache sometimes will cause some bugs.</p>  
@@ -111,6 +112,7 @@
               <div class="articleBlock">
                 <a class='list_item' target='_blank' href='install-web-app.html'>
                   <span class="list_title">Install Web App</span>
+                  <img src='../../img_data/'>
                 </a>
                   <p><span class='list_item_date'>2017-4-13</span><br />
                   To achieve the best experience of our mobile prototypes, we recommand you installing the prototypes as web apps on your mobile devices.</p>  
@@ -120,6 +122,7 @@
               <div class="articleBlock">
                 <a class='list_item' target='_blank' href='chrome&#39;s-mobile-simulator.html'>
                   <span class="list_title">Chrome&#39;s Mobile Simulator</span>
+                  <img src='../../img_data/'>
                 </a>
                   <p><span class='list_item_date'>2017-4-13</span><br />
                   The Chrome on Mac OS / Windows offers a mobile simulator. You can preview how the prototype is on the real mobile devices according to this simlator. </p>  
