--- a/prototypes/guide/clear-cache.html
+++ b/prototypes/guide/clear-cache.html
@@ -4,7 +4,7 @@
   <title>Clear Cache</title>
 <meta charset='utf-8'>
 <link rel="icon" type="image/x-icon" href="../../img/fav.ico">
-<meta name="viewport" content="width=device-width,minimal-ui"  >
+<meta name="viewport" content="width=device-width,minimal-ui,initial-scale=1.0" />
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link rel="stylesheet" type="text/css" href="../../css/public.css" media="screen">
@@ -15,7 +15,7 @@
 <script type="text/javascript" src="../../js/highlight.pack.js"></script>
 <style type="text/css"></style>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" type="text/css" href="../../css/detail.css" media="screen">
 </head>
 <body>
   <!-- nav -->
@@ -79,9 +79,10 @@
 </ul>
   </header>
   <div class='container'>
-   <!--main content -->
-   <div class="main">
-    <ul class="breadcrumbs">
+    <!--main content -->
+    <div class="container_left"></div>
+    <div class="main">
+      <ul class="breadcrumbs">
 	<li><a href="../../index.html">Home</a></li> 
 	</li>
 	
@@ -99,22 +100,10 @@
 	
 </ul>
 
-    <ul class='sideMenu'>
-	
-	
-		<li><a class=current  href='clear-cache.html'>Clear Cache</a></li>
-	
-		<li><a   href='install-web-app.html'>Install Web App</a></li>
-	
-		<li><a   href='chrome&#39;s-mobile-simulator.html'>Chrome&#39;s Mobile Simulator</a></li>
-	
-	
-</ul>
-    
-    <!-- article -->
-    <dir class="content">     
-     <div class="section">
-      <article class='article'>
+      <!-- article -->
+      <div class="content">     
+        <div class="section">
+          <article class='article'>
 	<header class='article_header'>
 		<h1>Clear Cache</h1>
 	</header>
@@ -143,17 +132,25 @@
 	</footer>
 </article>
        	
+        </div>
+      </div>
     </div>
-  </dir>
-
-
-</div>
-<!-- footer -->
-<div style="clear:both;"></div>
-<footer class='copyright'>
+    <ul class='sideMenu'>
+	
+	
+		<li><a class=current  href='clear-cache.html'>Clear Cache</a></li>
+	
+		<li><a   href='install-web-app.html'>Install Web App</a></li>
+	
+		<li><a   href='chrome&#39;s-mobile-simulator.html'>Chrome&#39;s Mobile Simulator</a></li>
+	
+	
+</ul>
+    <!-- footer -->
+  </div>
+  <footer class='copyright'>
 	<p>CCDS UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
-</div>
 </body>
 </html>
