--- a/team/index.html
+++ b/team/index.html
@@ -4,7 +4,7 @@
   <title>Team</title>
 <meta charset='utf-8'>
 <link rel="icon" type="image/x-icon" href="../img/fav.ico">
-<meta name="viewport" content="width=device-width,minimal-ui"  >
+<meta name="viewport" content="width=device-width,minimal-ui,initial-scale=1.0" />
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link rel="stylesheet" type="text/css" href="../css/public.css" media="screen">
@@ -103,11 +103,10 @@
     </dir>
   </div>
   <!-- footer -->
-  <div style="clear:both;"></div>
-  <footer class='copyright'>
+</div>
+ <footer class='copyright'>
 	<p>CCDS UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
-</div>
 </body>
 </html>
