--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Home</title>
 <meta charset='utf-8'>
 <link rel="icon" type="image/x-icon" href="./img/fav.ico">
-<meta name="viewport" content="width=device-width,minimal-ui"  >
+<meta name="viewport" content="width=device-width,minimal-ui,initial-scale=1.0" />
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link rel="stylesheet" type="text/css" href="./css/public.css" media="screen">
@@ -80,6 +80,7 @@
   </header>
   <div class='container'>  
     <!--main content -->
+    <div class="container_left"></div>
     <div class="main"> 
     <ul class="breadcrumbs">
 	<li><a href="./index.html">Home</a></li> 
@@ -92,27 +93,26 @@
 </ul>
 
          <!-- banner -->
-      <div class="banner"> <span>Banner here</span>
-      </div>
+      <div class="banner"> <span>Banner here</span></div>
       <!-- intro text -->
       <div class="intro"><span>Welcome to the Spark prototyping site! You can find the latest prototypes and test resultes here. Get to know the team and the limitless future of Spark.</span>
       </div>
       <!--content blocks -->
       <div class="block-wrapper">
-        <div class="block-l"> <a href="./prototypes/index.html"><span>Protorypes</span></a></div>
+        <div class="block-l"> <a href="./prototypes/index.html"><span>Prototypes</span></a></div>
         <div class="block-r"> <a href="./research/360°-camera-and-vr.html"><span>Research</span></a></div>
       </div>
       <div class="block-wrapper">
         <div class="block-a"><a href="./team/index.html"><span>Team</span></a></div>
       </div>
-    </dir>
+    </div>
+    <div class="container_left"></div>
   </div>
   <!-- footer -->
-  <div style="clear:both;"></div>
-  <footer class='copyright'>
+  </div>
+<footer class='copyright'>
 	<p>CCDS UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
-</div>
 </body>
 </html>
