--- a/prototypes/current/spark-p5-2016.html
+++ b/prototypes/current/spark-p5-2016.html
@@ -4,7 +4,7 @@
   <title>Spark P5 2016</title>
 <meta charset='utf-8'>
 <link rel="icon" type="image/x-icon" href="../../img/fav.ico">
-<meta name="viewport" content="width=device-width,minimal-ui"  >
+<meta name="viewport" content="width=device-width,minimal-ui,initial-scale=1.0" />
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link rel="stylesheet" type="text/css" href="../../css/public.css" media="screen">
@@ -15,7 +15,7 @@
 <script type="text/javascript" src="../../js/highlight.pack.js"></script>
 <style type="text/css"></style>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" type="text/css" href="../../css/detail.css" media="screen">
 </head>
 <body>
   <!-- nav -->
@@ -79,9 +79,10 @@
 </ul>
   </header>
   <div class='container'>
-   <!--main content -->
-   <div class="main">
-    <ul class="breadcrumbs">
+    <!--main content -->
+    <div class="container_left"></div>
+    <div class="main">
+      <ul class="breadcrumbs">
 	<li><a href="../../index.html">Home</a></li> 
 	</li>
 	
@@ -99,26 +100,10 @@
 	
 </ul>
 
-    <ul class='sideMenu'>
-	
-	
-		<li><a   href='spark-pairing.html'>Spark Pairing 2017</a></li>
-	
-		<li><a   href='spark-obtp.html'>Spark OBTP 2017</a></li>
-	
-		<li><a   href='spark20170124.html'>Spark 2017.1.24</a></li>
-	
-		<li><a class=current  href='spark-p5-2016.html'>Spark P5 2016</a></li>
-	
-		<li><a   href='spark-p1-2016.html'>Spark P1 2016</a></li>
-	
-	
-</ul>
-    
-    <!-- article -->
-    <dir class="content">     
-     <div class="section">
-      <article class='article'>
+      <!-- article -->
+      <div class="content">     
+        <div class="section">
+          <article class='article'>
 	<header class='article_header'>
 		<h1>Spark P5 2016</h1>
 	</header>
@@ -131,7 +116,7 @@
 <p>1) Open the prototype in Chrome&#39;s mobile simulator. Click <a href="../guide/chrome&#39;s-mobile-simulator.html">here</a> to learn more.</p>
 <p>2) Install the prototype on your iPhone as a web app. Click <a href="../guide/install-web-app.html">here</a> to learn more.</p>
 <h2 id="prototype-link">Prototype Link</h2>
-<p><a href="https://uxccds.github.io/SparkMobile/v2/page/p5.html">https://uxccds.github.io/SparkMobile/v2/page/p5.html</a></p>
+<p><a href="https://uxccds.github.io/SparkMobile/v2/page/p5.html">p5.html</a></p>
 <h1 id="goals">Goals</h1>
 <p>This prototype aims to demostrate the following goals:</p>
 <p>1) Demostrate the full experience of Spark app.</p>
@@ -152,17 +137,29 @@
 	</footer>
 </article>
        	
+        </div>
+      </div>
     </div>
-  </dir>
-
-
-</div>
-<!-- footer -->
-<div style="clear:both;"></div>
-<footer class='copyright'>
+    <ul class='sideMenu'>
+	
+	
+		<li><a   href='spark-pairing.html'>Spark Pairing 2017</a></li>
+	
+		<li><a   href='spark-obtp.html'>Spark OBTP 2017</a></li>
+	
+		<li><a   href='spark20170124.html'>Spark 2017.1.24</a></li>
+	
+		<li><a class=current  href='spark-p5-2016.html'>Spark P5 2016</a></li>
+	
+		<li><a   href='spark-p1-2016.html'>Spark P1 2016</a></li>
+	
+	
+</ul>
+    <!-- footer -->
+  </div>
+  <footer class='copyright'>
 	<p>CCDS UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
-</div>
 </body>
 </html>
