--- a/prototypes/current/spark-pairing.html
+++ b/prototypes/current/spark-pairing.html
@@ -4,7 +4,7 @@
   <title>Spark Pairing 2017</title>
 <meta charset='utf-8'>
 <link rel="icon" type="image/x-icon" href="../../img/fav.ico">
-<meta name="viewport" content="width=device-width,minimal-ui"  >
+<meta name="viewport" content="width=device-width,minimal-ui,initial-scale=1.0" />
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link rel="stylesheet" type="text/css" href="../../css/public.css" media="screen">
@@ -15,7 +15,7 @@
 <script type="text/javascript" src="../../js/highlight.pack.js"></script>
 <style type="text/css"></style>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" type="text/css" href="../../css/detail.css" media="screen">
 </head>
 <body>
   <!-- nav -->
@@ -79,9 +79,10 @@
 </ul>
   </header>
   <div class='container'>
-   <!--main content -->
-   <div class="main">
-    <ul class="breadcrumbs">
+    <!--main content -->
+    <div class="container_left"></div>
+    <div class="main">
+      <ul class="breadcrumbs">
 	<li><a href="../../index.html">Home</a></li> 
 	</li>
 	
@@ -99,48 +100,30 @@
 	
 </ul>
 
-    <ul class='sideMenu'>
-	
-	
-		<li><a class=current  href='spark-pairing.html'>Spark Pairing 2017</a></li>
-	
-		<li><a   href='spark-obtp.html'>Spark OBTP 2017</a></li>
-	
-		<li><a   href='spark20170124.html'>Spark 2017.1.24</a></li>
-	
-		<li><a   href='spark-p5-2016.html'>Spark P5 2016</a></li>
-	
-		<li><a   href='spark-p1-2016.html'>Spark P1 2016</a></li>
-	
-	
-</ul>
-    
-    <!-- article -->
-    <dir class="content">     
-     <div class="section">
-      <article class='article'>
+      <!-- article -->
+      <div class="content">     
+        <div class="section">
+          <article class='article'>
 	<header class='article_header'>
 		<h1>Spark Pairing 2017</h1>
 	</header>
 	<div class='article_body'>
-		<h1 id="mobile-prototype">Mobile Prototype</h1>
-<h3 id="screen-shot">Screen shot</h3>
+		<p><img src="../../img_data/prototypes/Spark Pairing_Cover.png" alt="Spark OBTP"/></p>
+<h3 id="mobile-prototype">Mobile Prototype</h3>
+<p><a href="https://uxccds.github.io/SparkMobile/SparkMobilePairing/sparkMobilePair.html">sparkMobilePair.html</a></p>
+<h3 id="desktop-prototype">Desktop Prototype</h3>
+<p><a href="https://uxccds.github.io/Spark-Hype-MVO/devicepairing-desktop.html">devicepairing-desktop.html</a></p>
+<h3 id="mx-prototype">MX Prototype</h3>
+<p><a href="https://uxccds.github.io/SparkMobile/pair/page/sparkboardpair.html">sparkboardpair.html</a></p>
+<h1 id="instuctions-for-use">Instuctions for use</h1>
 <p><img src="../../img_data/prototypes/spark-pairing1.png" alt="pairing prototype mobile"/></p>
-<h2 id="prototype-link">Prototype Link</h2>
-<p><a href="https://uxccds.github.io/SparkMobile/SparkMobilePairing/sparkMobilePair.html">https://uxccds.github.io/SparkMobile/SparkMobilePairing/sparkMobilePair.html</a></p>
-<h2 id="how-to">How-to</h2>
+<h3 id="on-mobile">On Mobile</h3>
 <p>1) Please use Chrome (mobile mode) or IPhone (webapp mode) to view the prototype.</p>
 <p>2) If you see any issues, try clearing your browser cache first.</p>
 <p>3) Choose a version to continue.</p>
-<h1 id="desktop">Desktop</h1>
-<h2 id="link">Link</h2>
-<p><a href="https://uxccds.github.io/Spark-Hype-MVO/devicepairing-desktop.html">https://uxccds.github.io/Spark-Hype-MVO/devicepairing-desktop.html</a></p>
-<h2 id="how-to">How-to</h2>
+<h3 id="on-desktop">On Desktop</h3>
 <p>1) Please use Chrome to view this prototype.</p>
-<h1 id="sparkboard">SparkBoard</h1>
-<h2 id="prototype-link">Prototype Link</h2>
-<p><a href="https://uxccds.github.io/SparkMobile/pair/page/sparkboardpair.html">https://uxccds.github.io/SparkMobile/pair/page/sparkboardpair.html</a></p>
-<h2 id="how-tos">How-tos</h2>
+<h3 id="on-mx">On MX</h3>
 <p>1) Please use Chrome to view this prototype.</p>
 <p>2) You can use the following hot keys to go to the screens.</p>
 <p>key space -&gt; black screen</p>
@@ -156,17 +139,29 @@
 	</footer>
 </article>
        	
+        </div>
+      </div>
     </div>
-  </dir>
-
-
-</div>
-<!-- footer -->
-<div style="clear:both;"></div>
-<footer class='copyright'>
+    <ul class='sideMenu'>
+	
+	
+		<li><a class=current  href='spark-pairing.html'>Spark Pairing 2017</a></li>
+	
+		<li><a   href='spark-obtp.html'>Spark OBTP 2017</a></li>
+	
+		<li><a   href='spark20170124.html'>Spark 2017.1.24</a></li>
+	
+		<li><a   href='spark-p5-2016.html'>Spark P5 2016</a></li>
+	
+		<li><a   href='spark-p1-2016.html'>Spark P1 2016</a></li>
+	
+	
+</ul>
+    <!-- footer -->
+  </div>
+  <footer class='copyright'>
 	<p>CCDS UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
-</div>
 </body>
 </html>
