--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -4,7 +4,7 @@
   <title>Prototypes</title>
 <meta charset='utf-8'>
 <link rel="icon" type="image/x-icon" href="../img/fav.ico">
-<meta name="viewport" content="width=device-width,minimal-ui"  >
+<meta name="viewport" content="width=device-width,minimal-ui,initial-scale=1.0" />
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link rel="stylesheet" type="text/css" href="../css/public.css" media="screen">
@@ -80,6 +80,7 @@
   </header>
   <div class='container'>
     <!--main content -->
+    <div class="container_left"></div>
     <div class="main">
     <ul class="breadcrumbs">
 	<li><a href="../index.html">Home</a></li> 
@@ -104,14 +105,14 @@
         <div class="block-l"> <a href="#"><span>Archived</span></a></div>
         <div class="block-r"> <a href="./guide/index.html"><span>FAQ & Troubleshoot</span></a></div>
       </div>
-    </dir>
+    </div>
+    <div class="container_left"></div>
   </div>
   <!-- footer -->
-  <div style="clear:both;"></div>
-  <footer class='copyright'>
+</div>
+<footer class='copyright'>
 	<p>CCDS UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
-</div>
 </body>
 </html>
