--- a/research/360°-camera-and-vr.html
+++ b/research/360°-camera-and-vr.html
@@ -4,7 +4,7 @@
   <title>360° Camera and VR</title>
 <meta charset='utf-8'>
 <link rel="icon" type="image/x-icon" href="../img/fav.ico">
-<meta name="viewport" content="width=device-width,minimal-ui"  >
+<meta name="viewport" content="width=device-width,minimal-ui,initial-scale=1.0" />
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link rel="stylesheet" type="text/css" href="../css/public.css" media="screen">
@@ -15,7 +15,7 @@
 <script type="text/javascript" src="../js/highlight.pack.js"></script>
 <style type="text/css"></style>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" type="text/css" href="../css/detail.css" media="screen">
 </head>
 <body>
   <!-- nav -->
@@ -79,9 +79,10 @@
 </ul>
   </header>
   <div class='container'>
-   <!--main content -->
-   <div class="main">
-    <ul class="breadcrumbs">
+    <!--main content -->
+    <div class="container_left"></div>
+    <div class="main">
+      <ul class="breadcrumbs">
 	<li><a href="../index.html">Home</a></li> 
 	</li>
 	
@@ -95,26 +96,10 @@
 	
 </ul>
 
-    <ul class='sideMenu'>
-	
-	
-		<li><a class=current  href='360°-camera-and-vr.html'>360° Camera and VR</a></li>
-	
-		<li><a   href='3d-gyroscope.html'>3D Gyroscope</a></li>
-	
-		<li><a   href='speech-recognition.html'>Speech Recognition</a></li>
-	
-		<li><a   href='webgl.html'>WebGL</a></li>
-	
-		<li><a   href='firebase.html'>Firebase</a></li>
-	
-	
-</ul>
-    
-    <!-- article -->
-    <dir class="content">     
-     <div class="section">
-      <article class='article'>
+      <!-- article -->
+      <div class="content">     
+        <div class="section">
+          <article class='article'>
 	<header class='article_header'>
 		<h1>360° Camera and VR</h1>
 	</header>
@@ -147,23 +132,35 @@
 	</div>
 	<footer class='article_footer'>
 		<div class="pagination">
-			
-			<a  class="next" href="3d-gyroscope.html">Next →</a> 	 	
+			<a  class="prev" href="webgl.html">← Prev</a>
+			<a  class="next" href="speech-recognition.html">Next →</a> 	 	
 		</div>		
 	</footer>
 </article>
        	
+        </div>
+      </div>
     </div>
-  </dir>
-
-
-</div>
-<!-- footer -->
-<div style="clear:both;"></div>
-<footer class='copyright'>
+    <ul class='sideMenu'>
+	
+	
+		<li><a   href='webgl.html'>WebGL</a></li>
+	
+		<li><a class=current  href='360°-camera-and-vr.html'>360° Camera and VR</a></li>
+	
+		<li><a   href='speech-recognition.html'>Speech Recognition</a></li>
+	
+		<li><a   href='3d-gyroscope.html'>3D Gyroscope</a></li>
+	
+		<li><a   href='firebase.html'>Firebase</a></li>
+	
+	
+</ul>
+    <!-- footer -->
+  </div>
+  <footer class='copyright'>
 	<p>CCDS UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
-</div>
 </body>
 </html>
