--- a/research/webgl.html
+++ b/research/webgl.html
@@ -4,7 +4,7 @@
   <title>WebGL</title>
 <meta charset='utf-8'>
 <link rel="icon" type="image/x-icon" href="../img/fav.ico">
-<meta name="viewport" content="width=device-width,minimal-ui"  >
+<meta name="viewport" content="width=device-width,minimal-ui,initial-scale=1.0" />
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link rel="stylesheet" type="text/css" href="../css/public.css" media="screen">
@@ -15,7 +15,7 @@
 <script type="text/javascript" src="../js/highlight.pack.js"></script>
 <style type="text/css"></style>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" type="text/css" href="../css/detail.css" media="screen">
 </head>
 <body>
   <!-- nav -->
@@ -79,9 +79,10 @@
 </ul>
   </header>
   <div class='container'>
-   <!--main content -->
-   <div class="main">
-    <ul class="breadcrumbs">
+    <!--main content -->
+    <div class="container_left"></div>
+    <div class="main">
+      <ul class="breadcrumbs">
 	<li><a href="../index.html">Home</a></li> 
 	</li>
 	
@@ -95,26 +96,10 @@
 	
 </ul>
 
-    <ul class='sideMenu'>
-	
-	
-		<li><a   href='360°-camera-and-vr.html'>360° Camera and VR</a></li>
-	
-		<li><a   href='3d-gyroscope.html'>3D Gyroscope</a></li>
-	
-		<li><a   href='speech-recognition.html'>Speech Recognition</a></li>
-	
-		<li><a class=current  href='webgl.html'>WebGL</a></li>
-	
-		<li><a   href='firebase.html'>Firebase</a></li>
-	
-	
-</ul>
-    
-    <!-- article -->
-    <dir class="content">     
-     <div class="section">
-      <article class='article'>
+      <!-- article -->
+      <div class="content">     
+        <div class="section">
+          <article class='article'>
 	<header class='article_header'>
 		<h1>WebGL</h1>
 	</header>
@@ -123,7 +108,7 @@
 <h1 id="prototype-for-webex-on-iwatch">Prototype for WebEx on iwatch</h1>
 <p>Years ago, Apple was going to publish the iwatch. Our company was asked to build the WebEx app on iwatch. However, we did not have the real iwatch at the early time. So we used WebGL to render a 3D model to display the prototype. </p>
 <h2 id="link-cisco-vpn-required-">link (Cisco VPN Required)</h2>
-<p><a href="https://uxprototype.cisco.com/projects/Reskin/wap/iwatch_draft/pages/3d.php">https://uxprototype.cisco.com/projects/Reskin/wap/iwatch_draft/pages/3d.php</a></p>
+<p><a href="https://uxprototype.cisco.com/projects/Reskin/wap/iwatch_draft/pages/3d.php">iwatch3d.php</a></p>
 <h2 id="usage">usage</h2>
 <p>1) Open the prototype in Chrome.</p>
 <p>2) Waiting for loading the 3d model.</p>
@@ -134,7 +119,7 @@
 <h1 id="further-more">Further More</h1>
 <p>After that I made a prototype to display all the prototypes I made for windows phone, iPhone, Car, Mac ...</p>
 <h2 id="link-cisco-vpn-required-">link (Cisco VPN Required)</h2>
-<p><a href="https://uxprototype.cisco.com/projects/Reskin/wap/3D/pages/3d.php">https://uxprototype.cisco.com/projects/Reskin/wap/3D/pages/3d.php</a></p>
+<p><a href="https://uxprototype.cisco.com/projects/Reskin/wap/3D/pages/3d.php">3d.php</a></p>
 <h2 id="usage">usage</h2>
 <p>1) Use the navigation tool on the top left corner to switch models and prototypes.</p>
 <p><img src="../img_data/research/WebGL3.png" alt="loading screen"/></p>
@@ -143,23 +128,35 @@
 	</div>
 	<footer class='article_footer'>
 		<div class="pagination">
-			<a  class="prev" href="speech-recognition.html">← Prev</a>
-			<a  class="next" href="firebase.html">Next →</a> 	 	
+			
+			<a  class="next" href="360°-camera-and-vr.html">Next →</a> 	 	
 		</div>		
 	</footer>
 </article>
        	
+        </div>
+      </div>
     </div>
-  </dir>
-
-
-</div>
-<!-- footer -->
-<div style="clear:both;"></div>
-<footer class='copyright'>
+    <ul class='sideMenu'>
+	
+	
+		<li><a class=current  href='webgl.html'>WebGL</a></li>
+	
+		<li><a   href='360°-camera-and-vr.html'>360° Camera and VR</a></li>
+	
+		<li><a   href='speech-recognition.html'>Speech Recognition</a></li>
+	
+		<li><a   href='3d-gyroscope.html'>3D Gyroscope</a></li>
+	
+		<li><a   href='firebase.html'>Firebase</a></li>
+	
+	
+</ul>
+    <!-- footer -->
+  </div>
+  <footer class='copyright'>
 	<p>CCDS UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
-</div>
 </body>
 </html>
