css and some minor updates

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <body>
   <!-- nav -->
   <header class="header">
+    <div class="NavContent">
     <a href="./index.html" class="logo"><img src="./img/logo.png"></a>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
@@ -77,10 +78,11 @@
 		</li>
 	
 </ul>
+    </div>
   </header>
-  <div class='container'>  
+  <div class='container'> 
+  <div class="wrapper"> 
     <!--main content -->
-    <div class="container_left"></div>
     <div class="main"> 
     <ul class="breadcrumbs">
 	<li><a href="./index.html">Home</a></li> 
@@ -106,12 +108,13 @@
         <div class="block-a"><a href="./team/index.html"><span>Team</span></a></div>
       </div>
     </div>
-    <div class="container_left"></div>
+    
+  </div>
   </div>
   <!-- footer -->
   </div>
 <footer class='copyright'>
-	<p>CCDS UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
+	<p>UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 </body>
