--- a/prototypes/guide/index.html
+++ b/prototypes/guide/index.html
@@ -19,6 +19,7 @@
   </head>
   <body>
   <header class="header">
+  <div class="NavContent">
     <a href="../../index.html" class="logo"><img src="../../img/logo.png"></a>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
@@ -76,9 +77,10 @@
 		</li>
 	
 </ul>
+      </div>
   </header>
         <div class='container'>
-            <div class="container_left"></div>
+            <div class="wrapper">
             <div class='main'>
              <ul class="breadcrumbs">
 	<li><a href="../../index.html">Home</a></li> 
@@ -104,7 +106,7 @@
                   <div class='articleBlock_cover'>
                       <p class='list_space'></p>
                       <p class="list_title">Clear Cache</p>
-                      <p class='list_item_date'>2017-4-24</p>
+                      <p class='list_item_date'>2017-5-10</p>
                       <p class='list_item_desc'>Browers usually cache datas to speed up loading web pages. This is why sometimes you can not see the latest version of the web pages. And cache sometimes will cause some bugs.</p>
                   </div>
               </a>  
@@ -114,7 +116,7 @@
                   <div class='articleBlock_cover'>
                       <p class='list_space'></p>
                       <p class="list_title">Install Web App</p>
-                      <p class='list_item_date'>2017-4-24</p>
+                      <p class='list_item_date'>2017-5-10</p>
                       <p class='list_item_desc'>To achieve the best experience of our mobile prototypes, we recommand you installing the prototypes as web apps on your mobile devices.</p>
                   </div>
               </a>  
@@ -124,7 +126,7 @@
                   <div class='articleBlock_cover'>
                       <p class='list_space'></p>
                       <p class="list_title">Chrome&#39;s Mobile Simulator</p>
-                      <p class='list_item_date'>2017-4-24</p>
+                      <p class='list_item_date'>2017-5-10</p>
                       <p class='list_item_desc'>The Chrome on Mac OS / Windows offers a mobile simulator. You can preview how the prototype is on the real mobile devices according to this simlator. </p>
                   </div>
               </a>  
@@ -136,10 +138,10 @@
                Page <a href="index.html" class="current">1</a>
               </div>    
             </div>
-            <div class="container_left"></div>
+            </div>
         </div>
       <footer class='copyright'>
-	<p>CCDS UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
+	<p>UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
   </body>
