--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -20,6 +20,7 @@
 <body>
   <!-- nav -->
   <header class="header">
+  <div class="NavContent">
     <a href="/" class="logo"><img src="../img/logo.png"></a>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
@@ -77,8 +78,10 @@
 		</li>
 	
 </ul>
+    </div>
   </header>
   <div class='container'>
+  <div class="wrapper">
     <!--main content -->
     <div class="container_left"></div>
     <div class="main">
@@ -108,10 +111,11 @@
     </div>
     <div class="container_left"></div>
   </div>
-  <!-- footer -->
+ </div>
 </div>
-<footer class='copyright'>
-	<p>CCDS UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
+ <!-- footer -->
+ <footer class='copyright'>
+	<p>UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 </body>
