--- a/research/index.html
+++ b/research/index.html
@@ -19,6 +19,7 @@
   </head>
   <body>
   <header class="header">
+  <div class="NavContent">
     <a href="../index.html" class="logo"><img src="../img/logo.png"></a>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
@@ -76,9 +77,10 @@
 		</li>
 	
 </ul>
+      </div>
   </header>
         <div class='container'>
-            <div class="container_left"></div>
+            <div class="wrapper">
             <div class='main'>
              <ul class="breadcrumbs">
 	<li><a href="../index.html">Home</a></li> 
@@ -152,10 +154,10 @@
                Page <a href="index.html" class="current">1</a>
               </div>    
             </div>
-            <div class="container_left"></div>
+            </div>
         </div>
       <footer class='copyright'>
-	<p>CCDS UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
+	<p>UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
   </body>
