--- a/research/webgl.html
+++ b/research/webgl.html
@@ -20,6 +20,7 @@
 <body>
   <!-- nav -->
   <header class="header">
+  <div class="NavContent">
     <a href="/" class="logo"><img src="../img/logo.png"></a>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
@@ -77,11 +78,12 @@
 		</li>
 	
 </ul>
+    </div>
   </header>
   <div class='container'>
+  <div class="wrapper">
     <!--main content -->
-    <div class="container_left"></div>
-    <div class="main">
+   <div class="main">
       <ul class="breadcrumbs">
 	<li><a href="../index.html">Home</a></li> 
 	</li>
@@ -126,12 +128,14 @@
 <p>2) Try to experience the protoypes inside the models.</p>
 		
 	</div>
+	<!-- hiding pagination per Damon's feedback 
 	<footer class='article_footer'>
+
 		<div class="pagination">
 			
 			<a  class="next" href="360°-camera-and-vr.html">Next →</a> 	 	
 		</div>		
-	</footer>
+	</footer>-->
 </article>
        	
         </div>
@@ -152,10 +156,11 @@
 	
 	
 </ul>
-    <!-- footer -->
+ </div>   
   </div>
-  <footer class='copyright'>
-	<p>CCDS UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
+ <!-- footer --> 
+ <footer class='copyright'>
+	<p>UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 </body>
