--- a/team/index.html
+++ b/team/index.html
@@ -20,6 +20,7 @@
 <body>
   <!-- nav -->
   <header class="header">
+  <div class="NavContent">
     <a href="../index.html" class="logo"><img src="../img/logo.png"></a>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
@@ -77,8 +78,10 @@
 		</li>
 	
 </ul>
+    </div>
   </header>
   <div class='container'>
+  <div class="wrapper">
     <!-- breadcrumb-->
     <!--main content -->
     <div class="main">
@@ -102,10 +105,11 @@
      <!-- how to add the members.ejs here??? -->
     </dir>
   </div>
-  <!-- footer -->
 </div>
- <footer class='copyright'>
-	<p>CCDS UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
+</div>
+   <!-- footer -->
+   <footer class='copyright'>
+	<p>UX Prototype Team ©2016-2017 <a target="_blank" href="https://en.wikipedia.org/wiki/MIT_License" class='license'>MIT license</a></p>
 </footer>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 </body>
