--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
          <!-- banner -->
       <!-- <div class="banner"> <span>Banner here</span></div>
-      intro text 
+      <!intro text 
       <div class="intro"><span>Welcome to the Spark prototyping site! You can find the latest prototypes and test resultes here. Get to know the team and the limitless future of Spark.</span>
       </div>-->
       <!--content blocks -->
