--- a/prototypes/experimental/index.html
+++ b/prototypes/experimental/index.html
@@ -124,7 +124,7 @@
 
              <!-- article list below -->
               
-              <a class="articleBlock" style="background-image: url('../../img_data/research/WebGL3.png');" target='_blank' href='speech-recognition.html'>
+              <a class="articleBlock" style="background-image: url('../../img_data/research/WebGL3.png');" target='_self' href='speech-recognition.html'>
                   <div class='articleBlock_cover'>
                       <p class='list_space'></p>
                       <p class="list_title">Speech Recognition</p>
