--- a/prototypes/archived/index.html
+++ b/prototypes/archived/index.html
@@ -124,7 +124,7 @@
 
              <!-- article list below -->
               
-              <a class="articleBlock" style="background-image: url('../../img_data/prototypes/cover/Spark P5 2016_Cover.png');" target='_blank' href='spark-p5-2016.html'>
+              <a class="articleBlock" style="background-image: url('../../img_data/prototypes/cover/Spark P5 2016_Cover.png');" target='_self' href='spark-p5-2016.html'>
                   <div class='articleBlock_cover'>
                       <p class='list_space'></p>
                       <p class="list_title">Spark P5 2016</p>
@@ -134,7 +134,7 @@
               </a>  
                  <!-- <hr class="divider" />   -->
               
-              <a class="articleBlock" style="background-image: url('../../img_data/prototypes/cover/Spark P1 2016_Cover.png');" target='_blank' href='spark-p1-2016.html'>
+              <a class="articleBlock" style="background-image: url('../../img_data/prototypes/cover/Spark P1 2016_Cover.png');" target='_self' href='spark-p1-2016.html'>
                   <div class='articleBlock_cover'>
                       <p class='list_space'></p>
                       <p class="list_title">Spark P1 2016</p>
