--- a/prototypes/current/spark-pairing.html
+++ b/prototypes/current/spark-pairing.html
@@ -133,27 +133,41 @@
 		<h1>Spark Pairing 2017</h1>
 	</header>
 	<div class='article_body'>
-		<p><img src="../../img_data/prototypes/Spark Pairing_Cover.png" alt="Spark OBTP"/></p>
-<h3 id="mobile-prototype">Mobile Prototype</h3>
-<p><a href="https://uxccds.github.io/SparkMobile/SparkMobilePairing/sparkMobilePair.html">sparkMobilePair.html</a></p>
+		<h3 id="mobile-prototype">Mobile Prototype</h3>
+<p><a href="https://uxccds.github.io/SparkMobile/SparkMobilePairing/sparkMobilePair.html">https://uxccds.github.io/SparkMobile/SparkMobilePairing/sparkMobilePair.html</a></p>
 <h3 id="desktop-prototype">Desktop Prototype</h3>
-<p><a href="https://uxccds.github.io/Spark-Hype-MVO/devicepairing-desktop.html">devicepairing-desktop.html</a></p>
-<h3 id="mx-prototype">MX Prototype</h3>
-<p><a href="https://uxccds.github.io/SparkMobile/pair/page/sparkboardpair.html">sparkboardpair.html</a></p>
+<p><a href="https://uxccds.github.io/Spark-Hype-MVO/devicepairing-desktop.html">https://uxccds.github.io/Spark-Hype-MVO/devicepairing-desktop.html</a></p>
+<h3 id="mx800-prototype">MX800 Prototype</h3>
+<p><a href="https://uxccds.github.io/SparkMobile/pair/page/sparkboardpair.html">https://uxccds.github.io/SparkMobile/pair/page/sparkboardpair.html</a></p>
 <h1 id="instuctions-for-use">Instuctions for use</h1>
-<p><img src="../../img_data/prototypes/spark-pairing1.png" alt="pairing prototype mobile"/></p>
+<p><img src="../../img_data/prototypes/Mobile-2x.png" alt="mobile"/>
+<img src="../../img_data/prototypes/Desktop-2x.png" alt="Desktop"/>
+<img src="../../img_data/prototypes/MX800-2x.png" alt="MX800"/></p>
 <h3 id="on-mobile">On Mobile</h3>
-<p>1) Please use Chrome (mobile mode) or IPhone (webapp mode) to view the prototype.</p>
-<p>2) If you see any issues, try clearing your browser cache first.</p>
-<p>3) Choose a version to continue.</p>
+<ol>
+<li><p>Please use Chrome (mobile mode) or IPhone (webapp mode) to view the prototype.</p>
+</li>
+<li><p>If you see any issues, try clearing your browser cache first.</p>
+</li>
+<li><p>Choose a version to continue.</p>
+</li>
+</ol>
 <h3 id="on-desktop">On Desktop</h3>
-<p>1) Please use Chrome to view this prototype.</p>
-<h3 id="on-mx">On MX</h3>
-<p>1) Please use Chrome to view this prototype.</p>
-<p>2) You can use the following hot keys to go to the screens.</p>
-<p>key space -&gt; black screen</p>
-<p>key 1 -&gt; the &#39;hello&#39; screen.</p>
-<p>key 2 -&gt; the screen with activity balls</p>
+<ol>
+<li>Please use Chrome to view this prototype.</li>
+</ol>
+<h3 id="on-mx800">On MX800</h3>
+<ol>
+<li><p>Please use Chrome to view this prototype.</p>
+</li>
+<li><p>You can use the following hot keys to go to the screens:</p>
+<ul>
+<li>key space -&gt; black screen</li>
+<li>key 1 -&gt; the &#39;hello&#39; screen.</li>
+<li>key 2 -&gt; the screen with activity balls</li>
+</ul>
+</li>
+</ol>
 		
 	</div>
 	<!-- hiding pagination per Damon's feedback 
