--- a/prototypes/current/spark-pairing.html
+++ b/prototypes/current/spark-pairing.html
@@ -140,9 +140,9 @@
 <h3 id="mx800-prototype">MX800 Prototype</h3>
 <p><a href="https://uxccds.github.io/SparkMobile/pair/page/sparkboardpair.html">https://uxccds.github.io/SparkMobile/pair/page/sparkboardpair.html</a></p>
 <h1 id="instuctions-for-use">Instuctions for use</h1>
-<p><img src="../img_data/prototypes/Mobile-2x.png" alt="mobile"/>
-<img src="/../img_data/prototypes/Desktop-2x.png" alt="Desktop"/>
-<img src="/../img_data/prototypes/MX800-2x.png" alt="MX800"/></p>
+<p><img src="../../img_data/prototypes/Mobile-2x.png" alt="mobile"/>
+<img src="../../img_data/prototypes/Desktop-2x.png" alt="Desktop"/>
+<img src="../../img_data/prototypes/MX800-2x.png" alt="MX800"/></p>
 <h3 id="on-mobile">On Mobile</h3>
 <ol>
 <li><p>Please use Chrome (mobile mode) or IPhone (webapp mode) to view the prototype.</p>
