--- a/prototypes/current/index.html
+++ b/prototypes/current/index.html
@@ -124,10 +124,10 @@
 
              <!-- article list below -->
               
-              <a class="articleBlock" style="background-image: url('../../img_data/prototypes/cover/Spark OBTP_Cover.png');" target='_self' href='spark-external-participant-space-privacy.html'>
+              <a class="articleBlock" style="background-image: url('../../img_data/prototypes/cover/Spark Space_Privacy_Cover.png');" target='_self' href='spark-space-privacy.html'>
                   <div class='articleBlock_cover'>
                       <p class='list_space'></p>
-                      <p class="list_title">Spark External Participant Space Privacy</p>
+                      <p class="list_title">Spark Space Privacy</p>
                       <p class='list_item_date'>2017-5-11</p>
                       <p class='list_item_desc'>Mobile prototype for space privacy in chatting involved with expernal participants.</p>
                   </div>
