--- a/prototypes/current/spark-obtp.html
+++ b/prototypes/current/spark-obtp.html
@@ -186,7 +186,7 @@ The parameter&#39;s value could be &#39;CCDS&#39;, &#39;UE&#39;, &#39;UT&#39;, &
     <ul class='sideMenu'>
 	
 	
-		<li><a   href='spark-external-participant-space-privacy.html'>Spark External Participant Space Privacy</a></li>
+		<li><a   href='spark-space-privacy.html'>Spark Space Privacy</a></li>
 	
 		<li><a   href='spark-pairing.html'>Spark Pairing 2017</a></li>
 	
