--- a/prototypes/current/spark-space-privacy.html
+++ b/prototypes/current/spark-space-privacy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Spark External Participant Space Privacy</title>
+  <title>Spark Space Privacy</title>
 <meta charset='utf-8'>
 <link rel="icon" type="image/x-icon" href="../../img/fav.ico">
 <meta name="viewport" content="width=device-width,minimal-ui,initial-scale=1.0" />
@@ -117,7 +117,7 @@
 		</li>
 	
 		<li>
-				<a href='../../prototypes/current/spark-external-participant-space-privacy.html' >Spark External Participant Space Privacy</a>
+				<a href='../../prototypes/current/spark-space-privacy.html' >Spark Space Privacy</a>
 		</li>
 	
 </ul>
@@ -130,7 +130,7 @@
         <div class="section">
           <article class='article'>
 	<header class='article_header'>
-		<h1>Spark External Participant Space Privacy</h1>
+		<h1>Spark Space Privacy</h1>
 	</header>
 	<div class='article_body'>
 		<h3 id="mobile-prototype">Mobile Prototype</h3>
@@ -140,6 +140,10 @@
 <p>1) Please use Chrome (mobile mode) or IPhone (webapp mode) to view the prototype.</p>
 <p>2) Try clear browser cache first if you see any issues.</p>
 <p>3) Choose a version to continue.</p>
+<h3 id="goals">Goals</h3>
+<p>This prototype is to compare the two options of when to hide the &quot;external participant&quot; and &quot;privacy&quot; labels.</p>
+<p>1) In scenario A, the external participant and privacy icons hide only as the input text gets longer and closer to them.</p>
+<p>2) In scenario B, the external participant and privacy icons hide themselves right after the user starts to type</p>
 		
 	</div>
 	<!-- hiding pagination per Damon's feedback 
@@ -159,7 +163,7 @@
     <ul class='sideMenu'>
 	
 	
-		<li><a class=current  href='spark-external-participant-space-privacy.html'>Spark External Participant Space Privacy</a></li>
+		<li><a class=current  href='spark-space-privacy.html'>Spark Space Privacy</a></li>
 	
 		<li><a   href='spark-pairing.html'>Spark Pairing 2017</a></li>
 	
