--- a/prototypes/current/spark20170124.html
+++ b/prototypes/current/spark20170124.html
@@ -162,7 +162,7 @@
     <ul class='sideMenu'>
 	
 	
-		<li><a   href='spark-external-participant-space-privacy.html'>Spark External Participant Space Privacy</a></li>
+		<li><a   href='spark-space-privacy.html'>Spark Space Privacy</a></li>
 	
 		<li><a   href='spark-pairing.html'>Spark Pairing 2017</a></li>
 	
