--- a/prototypes/current/spark-pairing.html
+++ b/prototypes/current/spark-pairing.html
@@ -174,7 +174,7 @@
 	<footer class='article_footer'>
 
 		<div class="pagination">
-			<a  class="prev" href="spark-external-participant-space-privacy.html">← Prev</a>
+			<a  class="prev" href="spark-space-privacy.html">← Prev</a>
 			<a  class="next" href="spark-obtp.html">Next →</a> 	 	
 		</div>		
 	</footer>-->
@@ -187,7 +187,7 @@
     <ul class='sideMenu'>
 	
 	
-		<li><a   href='spark-external-participant-space-privacy.html'>Spark External Participant Space Privacy</a></li>
+		<li><a   href='spark-space-privacy.html'>Spark Space Privacy</a></li>
 	
 		<li><a class=current  href='spark-pairing.html'>Spark Pairing 2017</a></li>
 	
