--- a/prototypes/current/spark-obtp.html
+++ b/prototypes/current/spark-obtp.html
@@ -140,6 +140,9 @@
 <h3 id="mx-prototype">MX Prototype</h3>
 <p><a href="https://uxccds.github.io/SparkMobile/pair/page/mx.html">https://uxccds.github.io/SparkMobile/pair/page/mx.html</a></p>
 <h1 id="instuctions-for-use">Instuctions for use</h1>
+<p><img src="../../img_data/prototypes/Mobile-2x.png" alt="mobile"/>
+<img src="../../img_data/prototypes/Desktop-2x.png" alt="Desktop"/>
+<img src="../../img_data/prototypes/MX800-2x.png" alt="MX800"/></p>
 <h3 id="on-mobile">On Mobile</h3>
 <p>1) Please use Chrome (mobile mode) or IPhone (webapp mode) to view the prototype.</p>
 <p>2) Try clear browser cache first if you see any issues.</p>
@@ -173,7 +176,7 @@ The parameter&#39;s value could be &#39;CCDS&#39;, &#39;UE&#39;, &#39;UT&#39;, &
 	<footer class='article_footer'>
 
 		<div class="pagination">
-			<a  class="prev" href="spark-pairing.html">← Prev</a>
+			<a  class="prev" href="spark-space-privacy.html">← Prev</a>
 			<a  class="next" href="spark20170124.html">Next →</a> 	 	
 		</div>		
 	</footer>-->
@@ -186,9 +189,11 @@ The parameter&#39;s value could be &#39;CCDS&#39;, &#39;UE&#39;, &#39;UT&#39;, &
     <ul class='sideMenu'>
 	
 	
-		<li><a   href='spark-space-privacy.html'>Spark Space Privacy</a></li>
-	
 		<li><a   href='spark-pairing.html'>Spark Pairing 2017</a></li>
+	
+		<li><a   href='spark-message-list.html'>Message List Features</a></li>
+	
+		<li><a   href='spark-space-privacy.html'>Spark Space Privacy</a></li>
 	
 		<li><a class=current  href='spark-obtp.html'>Spark OBTP 2017</a></li>
 	
