--- a/prototypes/current/spark-pairing.html
+++ b/prototypes/current/spark-pairing.html
@@ -174,8 +174,8 @@
 	<footer class='article_footer'>
 
 		<div class="pagination">
-			<a  class="prev" href="spark-space-privacy.html">← Prev</a>
-			<a  class="next" href="spark-obtp.html">Next →</a> 	 	
+			
+			<a  class="next" href="spark-message-list.html">Next →</a> 	 	
 		</div>		
 	</footer>-->
 </article>
@@ -187,9 +187,11 @@
     <ul class='sideMenu'>
 	
 	
-		<li><a   href='spark-space-privacy.html'>Spark Space Privacy</a></li>
-	
 		<li><a class=current  href='spark-pairing.html'>Spark Pairing 2017</a></li>
+	
+		<li><a   href='spark-message-list.html'>Message List Features</a></li>
+	
+		<li><a   href='spark-space-privacy.html'>Spark Space Privacy</a></li>
 	
 		<li><a   href='spark-obtp.html'>Spark OBTP 2017</a></li>
 	
