--- a/prototypes/current/spark-space-privacy.html
+++ b/prototypes/current/spark-space-privacy.html
@@ -135,7 +135,8 @@
 	<div class='article_body'>
 		<h3 id="mobile-prototype">Mobile Prototype</h3>
 <p><a href="https://uxccds.github.io/SparkMobile/ExternalParticipant/SpacePrivacy.html">https://uxccds.github.io/SparkMobile/ExternalParticipant/SpacePrivacy.html</a></p>
-<h1 id="instuctions">Instuctions</h1>
+<h1 id="instuctions-for-use">Instuctions for use</h1>
+<p><img src="../../img_data/prototypes/Mobile-2x.png" alt="mobile"/></p>
 <h3 id="on-mobile">On Mobile</h3>
 <p>1) Please use Chrome (mobile mode) or IPhone (webapp mode) to view the prototype.</p>
 <p>2) Try clear browser cache first if you see any issues.</p>
@@ -150,8 +151,8 @@
 	<footer class='article_footer'>
 
 		<div class="pagination">
-			
-			<a  class="next" href="spark-pairing.html">Next →</a> 	 	
+			<a  class="prev" href="spark-message-list.html">← Prev</a>
+			<a  class="next" href="spark-obtp.html">Next →</a> 	 	
 		</div>		
 	</footer>-->
 </article>
@@ -163,9 +164,11 @@
     <ul class='sideMenu'>
 	
 	
-		<li><a class=current  href='spark-space-privacy.html'>Spark Space Privacy</a></li>
-	
 		<li><a   href='spark-pairing.html'>Spark Pairing 2017</a></li>
+	
+		<li><a   href='spark-message-list.html'>Message List Features</a></li>
+	
+		<li><a class=current  href='spark-space-privacy.html'>Spark Space Privacy</a></li>
 	
 		<li><a   href='spark-obtp.html'>Spark OBTP 2017</a></li>
 	
