--- a/prototypes/experimental/speech-recognition.html
+++ b/prototypes/experimental/speech-recognition.html
@@ -187,8 +187,8 @@
 	<footer class='article_footer'>
 
 		<div class="pagination">
-			
-			 	 	
+			<a  class="prev" href="sound-wave.html">← Prev</a>
+			<a  class="next" href="vr-view-in-meeting.html">Next →</a> 	 	
 		</div>		
 	</footer>-->
 </article>
@@ -200,7 +200,17 @@
     <ul class='sideMenu'>
 	
 	
+		<li><a   href='sound-wave.html'>Sound Wave</a></li>
+	
 		<li><a class=current  href='speech-recognition.html'>Speech Recognition</a></li>
+	
+		<li><a   href='vr-view-in-meeting.html'>VR View In Meeting</a></li>
+	
+		<li><a   href='video-animation.html'>Video animation</a></li>
+	
+		<li><a   href='waiting-experience.html'>Waiting Experience</a></li>
+	
+		<li><a   href='welcome-page&#39;s-animation-on-ios.html'>Welcome Page&#39;s Animation on IOS</a></li>
 	
 	
 </ul>-->
