--- a/research/firebase.html
+++ b/research/firebase.html
@@ -149,7 +149,7 @@
 	<footer class='article_footer'>
 
 		<div class="pagination">
-			<a  class="prev" href="3d-gyroscope.html">← Prev</a>
+			<a  class="prev" href="face-detection.html">← Prev</a>
 			 	 	
 		</div>		
 	</footer>-->
@@ -167,6 +167,10 @@
 		<li><a   href='360°-camera-and-vr.html'>360° Camera and VR</a></li>
 	
 		<li><a   href='3d-gyroscope.html'>3D Gyroscope</a></li>
+	
+		<li><a   href='motion.html'>Motion</a></li>
+	
+		<li><a   href='face-detection.html'>Face Detection.</a></li>
 	
 		<li><a class=current  href='firebase.html'>Firebase</a></li>
 	
