--- a/prototypes/current/spark20170124.html
+++ b/prototypes/current/spark20170124.html
@@ -138,6 +138,8 @@
 <h3 id="desktop-prototype">Desktop Prototype</h3>
 <p><a href="https://uxccds.github.io/Spark-Hype-MVO/Spark-MVO-Prototype-currentBuild.html">Spark-MVO-Prototype-currentBuild.html</a></p>
 <h1 id="instuctions-for-use">Instuctions for use</h1>
+<p><img src="../../img_data/prototypes/Mobile-2x.png" alt="mobile"/>
+<img src="../../img_data/prototypes/Desktop-2x.png" alt="Desktop"/></p>
 <h3 id="on-mobile">On Mobile</h3>
 <p>1) Please use Chrome (mobile mode) or iPhone (webapp mode) to view the prototype.</p>
 <p>2) Try clear browser cache first if you encounter any issue.</p>
@@ -162,9 +164,11 @@
     <ul class='sideMenu'>
 	
 	
-		<li><a   href='spark-space-privacy.html'>Spark Space Privacy</a></li>
-	
 		<li><a   href='spark-pairing.html'>Spark Pairing 2017</a></li>
+	
+		<li><a   href='spark-message-list.html'>Message List Features</a></li>
+	
+		<li><a   href='spark-space-privacy.html'>Spark Space Privacy</a></li>
 	
 		<li><a   href='spark-obtp.html'>Spark OBTP 2017</a></li>
 	
