--- a/prototypes/guide/index.html
+++ b/prototypes/guide/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>Guide</title>
+      <title>Prototypes</title>
 <meta charset='utf-8'>
 <link rel="icon" type="image/x-icon" href="../../img/fav.ico">
 <meta name="viewport" content="width=device-width,minimal-ui,initial-scale=1.0" />
@@ -31,7 +31,7 @@
 				</li>
 			
 				<li>
-					<a  href='../../prototypes/index.html' >Prototypes</a>
+					<a class=current href='../../prototypes/index.html' >Prototypes</a>
 					
 						<ul class="subMenu">
 							
@@ -128,7 +128,7 @@
                   <div class='articleBlock_cover'>
                       <p class='list_space'></p>
                       <p class="list_title">Clear Cache</p>
-                      <p class='list_item_date'>2017-5-10</p>
+                      <p class='list_item_date'>2017-5-11</p>
                       <p class='list_item_desc'>Browers usually cache datas to speed up loading web pages. This is why sometimes you can not see the latest version of the web pages. And cache sometimes will cause some bugs.</p>
                   </div>
               </a>  
@@ -138,7 +138,7 @@
                   <div class='articleBlock_cover'>
                       <p class='list_space'></p>
                       <p class="list_title">Install Web App</p>
-                      <p class='list_item_date'>2017-5-10</p>
+                      <p class='list_item_date'>2017-5-11</p>
                       <p class='list_item_desc'>To achieve the best experience of our mobile prototypes, we recommand you installing the prototypes as web apps on your mobile devices.</p>
                   </div>
               </a>  
@@ -148,7 +148,7 @@
                   <div class='articleBlock_cover'>
                       <p class='list_space'></p>
                       <p class="list_title">Chrome&#39;s Mobile Simulator</p>
-                      <p class='list_item_date'>2017-5-10</p>
+                      <p class='list_item_date'>2017-5-11</p>
                       <p class='list_item_desc'>The Chrome on Mac OS / Windows offers a mobile simulator. You can preview how the prototype is on the real mobile devices according to this simlator. </p>
                   </div>
               </a>  
