--- a/research/3d-gyroscope.html
+++ b/research/3d-gyroscope.html
@@ -149,7 +149,7 @@
 
 		<div class="pagination">
 			<a  class="prev" href="360°-camera-and-vr.html">← Prev</a>
-			<a  class="next" href="firebase.html">Next →</a> 	 	
+			<a  class="next" href="motion.html">Next →</a> 	 	
 		</div>		
 	</footer>-->
 </article>
@@ -166,6 +166,10 @@
 		<li><a   href='360°-camera-and-vr.html'>360° Camera and VR</a></li>
 	
 		<li><a class=current  href='3d-gyroscope.html'>3D Gyroscope</a></li>
+	
+		<li><a   href='motion.html'>Motion</a></li>
+	
+		<li><a   href='face-detection.html'>Face Detection.</a></li>
 	
 		<li><a   href='firebase.html'>Firebase</a></li>
 	
