--- a/research/webgl.html
+++ b/research/webgl.html
@@ -169,6 +169,10 @@
 	
 		<li><a   href='3d-gyroscope.html'>3D Gyroscope</a></li>
 	
+		<li><a   href='motion.html'>Motion</a></li>
+	
+		<li><a   href='face-detection.html'>Face Detection.</a></li>
+	
 		<li><a   href='firebase.html'>Firebase</a></li>
 	
 	
