Article title and css change

--- a/prototypes/current/spark-obtp.html
+++ b/prototypes/current/spark-obtp.html
@@ -176,7 +176,7 @@ The parameter&#39;s value could be &#39;CCDS&#39;, &#39;UE&#39;, &#39;UT&#39;, &
 	<footer class='article_footer'>
 
 		<div class="pagination">
-			<a  class="prev" href="spark-space-privacy.html">← Prev</a>
+			<a  class="prev" href="spark-pairing.html">← Prev</a>
 			<a  class="next" href="spark20170124.html">Next →</a> 	 	
 		</div>		
 	</footer>-->
@@ -189,11 +189,11 @@ The parameter&#39;s value could be &#39;CCDS&#39;, &#39;UE&#39;, &#39;UT&#39;, &
     <ul class='sideMenu'>
 	
 	
-		<li><a   href='spark-pairing.html'>Spark Pairing 2017</a></li>
-	
 		<li><a   href='spark-message-list.html'>Message List Features</a></li>
 	
 		<li><a   href='spark-space-privacy.html'>Spark Space Privacy</a></li>
+	
+		<li><a   href='spark-pairing.html'>Spark Device Pairing</a></li>
 	
 		<li><a class=current  href='spark-obtp.html'>Spark OBTP 2017</a></li>
 	
