--- a/prototypes/current/spark-pairing.html
+++ b/prototypes/current/spark-pairing.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Spark Pairing 2017</title>
+  <title>Spark Device Pairing</title>
 <meta charset='utf-8'>
 <link rel="icon" type="image/x-icon" href="../../img/fav.ico">
 <meta name="viewport" content="width=device-width,minimal-ui,initial-scale=1.0" />
@@ -130,7 +130,7 @@
         <div class="section">
           <article class='article'>
 	<header class='article_header'>
-		<h1>Spark Pairing 2017</h1>
+		<h1>Spark Device Pairing</h1>
 	</header>
 	<div class='article_body'>
 		<h3 id="mobile-prototype">Mobile Prototype</h3>
@@ -174,8 +174,8 @@
 	<footer class='article_footer'>
 
 		<div class="pagination">
-			
-			<a  class="next" href="spark-message-list.html">Next →</a> 	 	
+			<a  class="prev" href="spark-space-privacy.html">← Prev</a>
+			<a  class="next" href="spark-obtp.html">Next →</a> 	 	
 		</div>		
 	</footer>-->
 </article>
@@ -187,11 +187,11 @@
     <ul class='sideMenu'>
 	
 	
-		<li><a class=current  href='spark-pairing.html'>Spark Pairing 2017</a></li>
-	
 		<li><a   href='spark-message-list.html'>Message List Features</a></li>
 	
 		<li><a   href='spark-space-privacy.html'>Spark Space Privacy</a></li>
+	
+		<li><a class=current  href='spark-pairing.html'>Spark Device Pairing</a></li>
 	
 		<li><a   href='spark-obtp.html'>Spark OBTP 2017</a></li>
 	
