--- a/prototypes/current/spark-space-privacy.html
+++ b/prototypes/current/spark-space-privacy.html
@@ -152,7 +152,7 @@
 
 		<div class="pagination">
 			<a  class="prev" href="spark-message-list.html">← Prev</a>
-			<a  class="next" href="spark-obtp.html">Next →</a> 	 	
+			<a  class="next" href="spark-pairing.html">Next →</a> 	 	
 		</div>		
 	</footer>-->
 </article>
@@ -164,11 +164,11 @@
     <ul class='sideMenu'>
 	
 	
-		<li><a   href='spark-pairing.html'>Spark Pairing 2017</a></li>
-	
 		<li><a   href='spark-message-list.html'>Message List Features</a></li>
 	
 		<li><a class=current  href='spark-space-privacy.html'>Spark Space Privacy</a></li>
+	
+		<li><a   href='spark-pairing.html'>Spark Device Pairing</a></li>
 	
 		<li><a   href='spark-obtp.html'>Spark OBTP 2017</a></li>
 	
