--- a/prototypes/current/spark-message-list.html
+++ b/prototypes/current/spark-message-list.html
@@ -151,7 +151,7 @@
 	<footer class='article_footer'>
 
 		<div class="pagination">
-			<a  class="prev" href="spark-pairing.html">← Prev</a>
+			
 			<a  class="next" href="spark-space-privacy.html">Next →</a> 	 	
 		</div>		
 	</footer>-->
@@ -164,11 +164,11 @@
     <ul class='sideMenu'>
 	
 	
-		<li><a   href='spark-pairing.html'>Spark Pairing 2017</a></li>
-	
 		<li><a class=current  href='spark-message-list.html'>Message List Features</a></li>
 	
 		<li><a   href='spark-space-privacy.html'>Spark Space Privacy</a></li>
+	
+		<li><a   href='spark-pairing.html'>Spark Device Pairing</a></li>
 	
 		<li><a   href='spark-obtp.html'>Spark OBTP 2017</a></li>
 	
